Using correct label and relase info in landing page and header